--- a/package.json
+++ b/package.json
@@ -4,20 +4,22 @@
     "description": "Blog CMS using Node.js, Express, and MongoDB",
     "main": "src/server.ts",
     "scripts": {
-      "start": "ts-node src/server.ts",
-      "dev": "nodemon --exec ts-node src/server.ts",
-      "build": "tsc"
+        "start": "ts-node src/server.ts",
+        "dev": "nodemon --exec ts-node src/server.ts",
+        "build": "tsc"
     },
     "dependencies": {
-      "express": "^4.17.1",
-      "mongoose": "^6.0.12",
-      "dotenv": "^10.0.0"
+        "@types/cors": "^2.8.17",
+        "cors": "^2.8.5",
+        "dotenv": "^10.0.0",
+        "express": "^4.17.1",
+        "mongoose": "^6.0.12"
     },
     "devDependencies": {
-      "@types/express": "^4.17.13",
-      "@types/node": "^16.11.6",
-      "nodemon": "^2.0.14",
-      "ts-node": "^10.4.0",
-      "typescript": "^4.4.4"
+        "@types/express": "^4.17.13",
+        "@types/node": "^16.11.6",
+        "nodemon": "^2.0.14",
+        "ts-node": "^10.4.0",
+        "typescript": "^4.4.4"
     }
-  }
+}
