--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
-        "mongoose": "^6.0.12"
+        "mongoose": "^6.0.12",
+        "zod": "^3.23.8"
     },
     "devDependencies": {
         "@types/express": "^4.17.13",
@@ -21,5 +22,8 @@
         "nodemon": "^2.0.14",
         "ts-node": "^10.4.0",
         "typescript": "^4.4.4"
+    },
+    "engines": {
+        "node": ">=22.9.0"
     }
 }
