--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGODB_URI="mongodb+srv://fakhar:61wiJ16i2hhGgttw@cluster0.vucivls.mongodb.net/blog_data?retryWrites=true&w=majority&appName=Cluster0"
+API_KEY=123456
