--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "@types/cors": "^2.8.17",
+        "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
@@ -17,6 +18,7 @@
         "zod": "^3.23.8"
     },
     "devDependencies": {
+        "@types/bcryptjs": "^2.4.6",
         "@types/express": "^4.17.13",
         "@types/node": "^16.11.6",
         "nodemon": "^2.0.14",
@@ -24,6 +26,6 @@
         "typescript": "^4.4.4"
     },
     "engines": {
-        "node": ">=22.9.0"
+        "node": ">=20.x"
     }
 }
