--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
         "build": "tsc"
     },
     "dependencies": {
+        "@types/config": "^3.3.5",
         "@types/cors": "^2.8.17",
         "bcryptjs": "^2.4.3",
+        "config": "^3.3.12",
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
