--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
         "@types/cors": "^2.8.17",
         "bcryptjs": "^2.4.3",
         "config": "^3.3.12",
+        "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
+        "jsonwebtoken": "^9.0.2",
         "mongoose": "^6.0.12",
         "zod": "^3.23.8"
     },
     "devDependencies": {
         "@types/bcryptjs": "^2.4.6",
         "@types/express": "^4.17.13",
+        "@types/jsonwebtoken": "^9.0.7",
         "@types/node": "^16.11.6",
         "nodemon": "^2.0.14",
         "ts-node": "^10.4.0",
